# HSGQG-Result-Reminder-Bot

./: .gitignore  .replit  Pipfile  README.md  facebook_messenger.py  pyproject.toml  requirements.txt  result.json  rss.py  wsgi.py
templates/: index.html  privacy.html
